Fixed vertical-align

--- a/VeWoteStyle.css
+++ b/VeWoteStyle.css
@@ -1,7 +1,6 @@
 /*BITTE WEITER GEHEN - HIER GIBT ES NICHTS ZU SEHEN!!!*/
 
 @import url('https://fonts.googleapis.com/css?family=Hind+Siliguri');
-
 body {
     font-family: 'Hind Siliguri', sans-serif;
     background-image: url("images/background.svg");
@@ -19,6 +18,7 @@ input {
 h3 {
     font-size: 125%;
 }
+
 #header {
     background-color: rgba(255, 255, 255, 0.5);
     padding: 8px;
@@ -44,7 +44,7 @@ h3 {
     padding: 10px;
     overflow: hidden;
     background-color: #96b4ff;
-    box-shadow:  inset 0 3px 0 rgb(184, 211, 255);
+    box-shadow: inset 0 3px 0 rgb(184, 211, 255);
     border: 1px solid #3079ED;
 }
 
@@ -52,7 +52,8 @@ h3 {
     display: inline;
 }
 
-#navigationMenu li a, .rightnav li {
+#navigationMenu li a,
+.rightnav li {
     color: rgb(85, 85, 85);
     padding: 10px;
     padding-right: 20px;
@@ -60,40 +61,39 @@ h3 {
     text-decoration: bold;
 }
 
-#navigationMenu li a:hover {
+#navigationMenu li a:hover,
+.rightnav:hover {
     color: #2e2e2e;
-	transition-duration: 0.25s;
-}
-
-.rightnav {
-    float: right;
+    transition-duration: 0.25s;
 }
 
 .rightnav {
     color: rgb(85, 85, 85);
     text-decoration: none;
     text-decoration: bold;
+    float: right;
+    cursor: pointer;
 }
 
 .card {
     text-align: center;
-	background-color: white;
+    background-color: white;
     border: 1px solid #3079ED;
     color: rgb(51, 45, 45);
     padding: 2% 4%;
-    text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-size: 75%;
     margin: 4% 2%;
     width: 200px;
     min-width: 200px;
     min-height: 250px;
-	border-radius: 3%;
+    border-radius: 3%;
+    display: inline-block;
+    vertical-align: top;
 }
 
 .card:hover {
-	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 h2 {
@@ -125,6 +125,11 @@ h2 {
     padding: 10px;
     background-color: #96b4ff;
     border: 1px solid #3079ED;
-    box-shadow:  inset 0 3px 0 rgb(184, 211, 255);
+    box-shadow: inset 0 3px 0 rgb(184, 211, 255);
     color: rgb(85, 85, 85);
+}
+
+#filterBar {
+    display: none;
+    max-width: 100vw;
 }
